Contrast fixed

--- a/styles/place.css
+++ b/styles/place.css
@@ -21,7 +21,7 @@ header div{
 
 h1{
     text-align: center;
-    color: #FFD700;
+    color: #696060;
     -webkit-text-stroke-width: .5px;
     -webkit-text-stroke-color: rgba(0, 0, 0, 0.5);
     font-family: var(--font-title);
@@ -106,7 +106,7 @@ footer{
 }
 
 footer p{
-    color: white;
+    color: #373737;
     text-align: center;
     padding: 1rem;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
